# jarvis-trading-mcp

./: .gitignore  .graphifyignore  README.md  pyproject.toml
.code-reviews/: 2026-05-14.md  2026-05-21.md  2026-05-28.md  2026-06-04.md  2026-06-11.md  2026-06-18.md  2026-06-25.md  2026-07-02.md
docs/: entra-oauth-migration.md
friend_mcp/: __init__.py  server.py
graphify-out/: GRAPH_REPORT.md  graph.json  manifest.json
